--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ nav > h1 {
     color: white;
     text-align: center;
     margin: 0%;
-    padding: 20px;
+    padding: 30px;
+    font-size: 2.5em;
 }
 
 ul, li {
@@ -20,6 +21,7 @@ ul, li {
     display: flex;
     padding: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.541);
+    font-size: 1.3em;
 }
 
 a {
@@ -100,7 +102,7 @@ h2, p {
 
 /* CAIXA CENTRAL COM TEXTO CENTRALIZADO E FUNDO TRANSLÚCIDO */
 div {
-    background-color: rgba(250, 235, 215, 0.521);
+    background-color: rgba(250, 235, 215, 0.74);
     max-width: 700px;
     padding: 20px;
     border-radius: 20px;
